--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1636,3 +1636,25 @@ ngx-simplebar {
         }
     }
 }
+
+.ngb_tooltip_custom_class{
+    opacity: 1 !important;
+    margin-left: -14px;    
+    .arrow{
+        &::before{
+            border-top-color: #fff !important;
+        }
+    }
+    .tooltip-inner{
+        color: #202124;
+        opacity: 1;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 15px;
+        padding: 6px 10px;
+        background: #FFFFFF;
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 6px;
+        max-width: 100%;
+    }
+}
