--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -95,7 +95,7 @@
                                     </div>
                                     <div class="col-4 p-0 lef-info">
                                         <div class="approved_title">{{'resultRanking.last_changes_caps' | translate}}</div>
-                                        <div class="approved_date"><span class="time">26 Oct,2020</span></div>
+                                        <div class="approved_date"><span class="time">{{lastModifiedOn | dateFormatPipe: 'DD-MMM-YYYY'}}</span></div>
                                     </div>
                                     <div class="col-4 p-0 actions-sec">
                                         <div class="kr-sg-dropdowns comments_header_dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
@@ -148,7 +148,7 @@
                                                         
 
                                                     </div>
-                                                    <div class="col-2 text-right time-stamp">{{actLog.target.contentInfo.createdOn}}</div>
+                                                    <div class="col-2 text-right time-stamp">{{actLog.customization.lMod}}</div>
                                                 </div>
                                             </a>
                                           </div>
