--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -175,6 +175,53 @@
                 }
             }
         }
+        .source_content_boxes{
+            .crawlContent{
+                margin: 0 0 60px 0;
+                .main-title{
+                    font-weight: 600;
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: #5F6368;
+                }
+                .card-data{
+                    background: #FFFFFF;
+                    border: 1px solid #BDC1C6;
+                    box-sizing: border-box;
+                    border-radius: 6px;
+                    width: 313px;
+                    height: 94px;
+                    padding: 20px;
+                    display: flex;
+                    align-items: center;
+                    margin: 20px 20px 0px 0;
+                    cursor: pointer;
+                    .img-block{
+                        img{
+
+                        }
+                    }
+                    .titles-sec{
+                        margin-left: 28px;
+                        .p-title{
+                            color: #3C4043;
+                            font-weight: 600;
+                            font-size: 16px;
+                            line-height: 19px;
+                            margin-bottom: 4px;
+                            width: 195px;
+                        }
+                        .s-title{
+                            color: #202124;
+                            font-weight: normal;
+                            font-size: 12px;
+                            line-height: 20px;
+                            width: 195px;
+                        }
+                    }
+                }
+            }
+        }
     }    
     .imageDiv{       
         img{
@@ -185,151 +232,7 @@
     .kr-sg-data-table section.table-content .content-body{
         cursor: pointer;
     }
-    .sources-content-box-list{
-        position: relative;
-        .crawlContent{
-            margin-bottom: 20px !important;
-            .main-title{
-                padding-left: 15px;
-                color: #202124;
-                font-weight: 600;
-                font-size: 16px;
-            }
-            .webDomain{    
-                padding: 15px;   
-                .check{
-                    position: absolute;
-                    right: 10px;
-                    top: 12px;
-                }
-                &.selected{
-                    .box-block{
-                        border: 1px solid #85B7FE;
-                        background-color: #F3F8FF;
-                        .title{
-                            color: #07377F;
-                        }
-                        .info-text{
-                            color: #07377F;
-                        }
-                    }  
-                } 
-                .box-block-flat{
-                    cursor: pointer;
-                    background: #FFFFFF;
-                    border: 1px solid #BDC1C6;
-                    box-sizing: border-box;
-                    border-radius: 6px;
-                    width: 313px;
-                    height: 94px;
-                    &:hover{                        
-                        border: 1px solid #85B7FE;
-                        background-color: #F3F8FF;
-                        .title{
-                            color: #07377F;
-                        }
-                        .info-text{
-                            color: #07377F;
-                        }
-                    }
-                    .title{
-                        color: #3C4043;
-                        font-size: 16px;
-                        font-weight: 600;
-                    }
-                    .text-div{
-                        padding-top: 20px;
-                        .icon-gray{
-                            position: absolute;
-                            right: 12px;
-                            top: 5px;
-                        }
-                    }
-                    .imageDiv{
-                        padding: 20px 0px 20px 30px;
-                        img{
-                            height: 47px;
-                            width: 47px;
-                        }
-                    }
-                    .info-text{
-                        color: #202124;             
-                        font-size: 14px;
-                        white-space: nowrap;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                    }
-                }   
-                .box-block{
-                    background: #fff;           
-                    border-radius: 6px;
-                    border: 1px solid #BDC1C6;
-                    padding: 25px 20px;
-                    text-align: center;
-                    cursor: pointer;
-                    transition: all 0.3s ease;
-                    position: relative;
-                    width: 250px;
-                    height: 250px;
-                    &:hover{                        
-                        border: 1px solid #85B7FE;
-                        background-color: #F3F8FF;
-                        .title{
-                            color: #07377F;
-                        }
-                        .info-text{
-                            color: #07377F;
-                        }
-                    }
-                    .title{
-                        color: #202124;
-                        font-size: 16px;
-                        font-weight: 500;
-                    }
-                    .imageDiv{
-                        padding: 46px 0;
-                        img{
-                            height: 65px;
-                            width: 65px;
-                        }
-                    }
-                    .info-text{
-                        color: #5F6368;             
-                        font-size: 14px;
-                        white-space: nowrap;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                    }
-                }           
-            }
-        }
-        .buttonFooter{      
-            position: fixed;
-            width: 100%;
-            background-color: #fff;
-            left: 80px;
-            bottom: 0;
-            padding: 13px;
-            box-shadow: 0px -1px 8px rgba(32, 33, 36, 0.2);
-            padding-left: 245px;
-            .kr-sg-button-primary{
-                background: #0D6EFD;
-                color: #FFFFFF;
-                height: 34px;
-            }
-            .kr-sg-button-secondary-two{
-                border: 1px solid #BDC1C6;
-                border-radius: 4px;
-                height: 34px;
-                background: #FFFFFF;
-                color: #202124;
-                &.cancel{
-                    color: #202124;
-                    border: 0;
-                }
-            }
-        }
-    } 
+   
     .table-list-content{
         .kr-sg-data-table{
             .table-action-header{
@@ -1331,58 +1234,8 @@
 }
 
 ::ng-deep.botsModal {
-    .modal-content {
-        // top: 50% !important;
-        // left: 50% !important;
-        // transform: translate(-50%, -50%) !important;
-        // height: 80% !important;
-        height: 100% !important;
-        overflow: hidden !important;
-        // border-radius: 10px !important;
-        border-radius: 0px !important;
-    }
-    .bots-modal-modal-header {
-        position: relative !important;
-        display: flex !important;
-        align-items: center !important;
-        top: 0px !important;
-        height: 8% !important;
-        width: 100% !important;
-        // background: #d3d3d3 !important;
-        background: #FFFFFF !important;
-        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2) !important;
-        // border-radius: 10px 10px 0px 0px !important;
-        justify-content: space-between !important;
-        // border-bottom: none !important;
-        border-bottom: 1px solid #BDC1C6 !important;
-        // font-size: large !important;
-        padding: 17px 30px;
-        font-weight: 600 !important;
-        .bots-modal-header-title {
-            // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
-            // font-weight: normal !important;
-            color: #26344a !important;
-            // margin-left: 10px !important;
-        }    
-        .button-close {
-            height: 30px !important;
-            width: 30px !important;
-            border: none !important;
-            // border: 2px solid #2c3334 !important;
-            // margin-right: 10px !important;
-            // border-radius: 10px !important;
-            color: #2c3334 !important;
-            // font-weight: 1000 !important;
-            font-size: 25px !important;
-            background: inherit !important;
-        }
-    }
-    .bots-modal-modal-body {
-        position: relative !important;
-        width: 100% !important;
-        height: 100% !important;
-        background: #fff !important;
-        padding: 45px 35px !important;
+   
+    .bots-modal-modal-body {       
         .bots-modal-empty-bots-container {
             position: relative !important;
             top: 50% !important;
@@ -1393,12 +1246,7 @@
             transform: translate(-50%, -80%) !important;
         }
         .bots-modal-search-input-container {
-            position: relative !important;
-            top: 10px !important;
-            right: 5px !important;
-            left: 5px !important;
-            width: calc(100% - 10px) !important;
-            height: fit-content !important;
+            position: relative !important;           
             input::placeholder {
                 color: #BDC1C6 !important;
             }
@@ -1406,13 +1254,12 @@
                 height: 100% !important;
                 width: 100% !important;
                 border: 1px solid #E4E5E7 !important;
-                padding: 10px 30px !important;
-                // border-radius: 10px !important;
+                padding: 10px 30px !important;              
             } 
             .bots-modal-search-icon {
-                position: relative !important;
-                top: -30px !important;
-                left: 10px !important;
+                position: absolute;
+                top: 12px;
+                left: 10px;
             }
         }
         .bots-modal-list-container {
@@ -1521,9 +1368,7 @@
             }
             
         }
-    
-    }
-    
+    }    
 }
 .kr-sg-button-primary{
     background: #0D6EFD;
