--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -7,67 +7,31 @@
     <div class="header-sec row">
       <div class="col-6 left-sec p-0">
         <div class="tab-sec d-flex">
-          <div
-            class="tab_title"
-            [ngClass]="{ active: setTab === 'all' }"
-            (click)="selectedTab('all')"
-          >
+          <div class="tab_title" [ngClass]="{ active: setTab === 'all' }" (click)="selectedTab('all')">
             All<span>({{ allExp }})</span>
           </div>
-          <div
-            class="tab_title"
-            [ngClass]="{ active: setTab === 'configured' }"
-            (click)="selectedTab('configured')"
-          >
+          <div class="tab_title" [ngClass]="{ active: setTab === 'configured' }" (click)="selectedTab('configured')">
             Configured<span>({{ confExp }})</span>
           </div>
-          <div
-            class="tab_title"
-            [ngClass]="{ active: setTab === 'active' }"
-            (click)="selectedTab('active')"
-          >
+          <div class="tab_title" [ngClass]="{ active: setTab === 'active' }" (click)="selectedTab('active')">
             Active<span>({{ actExp }})</span>
           </div>
-          <div
-            class="tab_title"
-            [ngClass]="{ active: setTab === 'paused' }"
-            (click)="selectedTab('paused')"
-          >
+          <div class="tab_title" [ngClass]="{ active: setTab === 'paused' }" (click)="selectedTab('paused')">
             Paused<span>({{ pauExp }})</span>
           </div>
-          <div
-            class="tab_title"
-            [ngClass]="{ active: setTab === 'completed' }"
-            (click)="selectedTab('completed')"
-          >
+          <div class="tab_title" [ngClass]="{ active: setTab === 'completed' }" (click)="selectedTab('completed')">
             Completed<span>({{ compExp }})</span>
           </div>
         </div>
       </div>
-      <div
-        class="col-6 p-0 right-sec d-flex align-items-center justify-content-end"
-      >
-        <div
-          class="kr-sg-input-search m-0"
-          [ngClass]="{ active: showSearch }"
-          style="float: left"
-        >
-          <input
-            type="text"
-            placeholder="Search"
-            autocomplete="off"
-            class="input-search"
-            name="searchSources"
-            placeholder="Search"
-            id="fieldSearchId"
-            [(ngModel)]="searchFields"
-          />
+      <div class="col-6 p-0 right-sec d-flex align-items-center justify-content-end">
+        <div class="kr-sg-input-search m-0" [ngClass]="{ active: showSearch }" style="float: left">
+          <input type="text" placeholder="Search" autocomplete="off" class="input-search" name="searchSources"
+            placeholder="Search" id="fieldSearchId" [(ngModel)]="searchFields" />
         </div>
         <div class="seach-block" (click)="toggleSearch()">
-          <img *ngIf="!showSearch" src="assets/icons/search.svg" /><img
-            *ngIf="showSearch"
-            src="assets/images/close.svg"
-          />Search
+          <img *ngIf="!showSearch" src="assets/icons/search.svg" /><img *ngIf="showSearch"
+            src="assets/images/close.svg" />Search
         </div>
         <div (click)="addExperiment('add')" class="title">
           <img src="assets/icons/add_plus.svg" />Add Experiment
@@ -75,10 +39,7 @@
       </div>
     </div>
     <perfect-scrollbar class="p-scroll-data">
-      <div
-        class="table-data-content"
-        *ngIf="listOfExperiments && listOfExperiments.length"
-      >
+      <div class="table-data-content" *ngIf="listOfExperiments && listOfExperiments.length">
         <div class="row m-0 header-data col-12">
           <div class="col-3 h-title">Experiment Name</div>
           <div class="col-3 h-title">Variants</div>
@@ -86,28 +47,17 @@
           <div class="col-4 h-title">DURATION</div>
         </div>
         <div id="accordion">
-          <div
-            class="acc-card"
-            *ngFor="
+          <div class="acc-card" *ngFor="
               let exp of listOfExperiments | filter: [searchFields, 'name']
-            "
-          >
+            ">
             <div class="acc-card-header">
-              <div
-                class="acc-card-link collapsed"
-                data-toggle="collapse"
-                attr.data-target="#{{ exp._id }}"
-              >
+              <div class="acc-card-link collapsed" data-toggle="collapse" attr.data-target="#{{ exp._id }}">
                 <div class="row m-0 col-12 row_data">
                   <div class="col-3 ex-title">{{ exp.name }}</div>
                   <div class="col-3 variants">
                     <div class="variants-block left">
-                      <span
-                        class="v-name"
-                        *ngFor="let vari of exp.variants"
-                        [style.background-color]="vari.color"
-                        >{{ vari.code }}</span
-                      >
+                      <span class="v-name" *ngFor="let vari of exp.variants" [style.background-color]="vari.color">{{
+                        vari.code }}</span>
                     </div>
                     <div class="variants-block right">
                       <span class="v-name">B</span>
@@ -117,27 +67,12 @@
                   <div class="col-2 status">
                     <span class="a-status" *ngIf="exp.state === 'active'">{{
                       exp.state
-                    }}</span>
-                    <span
-                      class="a-status configured"
-                      *ngIf="exp.state === 'configured'"
-                      >{{ exp.state }}</span
-                    >
-                    <span
-                      class="a-status paused"
-                      *ngIf="exp.state === 'paused'"
-                      >{{ exp.state }}</span
-                    >
-                    <span
-                      class="a-status completed"
-                      *ngIf="exp.state === 'completed'"
-                      >{{ exp.state }}</span
-                    >
+                      }}</span>
+                    <span class="a-status configured" *ngIf="exp.state === 'configured'">{{ exp.state }}</span>
+                    <span class="a-status paused" *ngIf="exp.state === 'paused'">{{ exp.state }}</span>
+                    <span class="a-status completed" *ngIf="exp.state === 'completed'">{{ exp.state }}</span>
                   </div>
-                  <div
-                    class="col-4 d-flex align-items-center duration-data"
-                    *ngIf="exp.state !== 'configured'"
-                  >
+                  <div class="col-4 d-flex align-items-center duration-data" *ngIf="exp.state !== 'configured'">
                     <div class="left-sec">
                       <div class="date-stamp">Start Date: 24 Jul 2020</div>
                       <div class="date-stamp">End Date: 28 Jul 2020</div>
@@ -146,16 +81,17 @@
                       <div class="hours">22 hrs more to go</div>
                     </div>
                   </div>
-                  <div class="right-sec" *ngIf="exp.state === 'configured'">
-                    <button class="hours" (click)="runExperiment(exp._id)">
-                      Run
-                    </button>
+                  <div class="col-4 d-flex align-items-center duration-data justify-content-between" *ngIf="exp.state === 'configured'">
+                    <div class="left-sec border-0">
+                      <div class="info-data"><img src="assets/icons/experiment/Info.svg">You cannot run multiple experiements</div>
+                    </div>
+                    <div class="right-sec">
+                      <button class="kr-sg-button-secondary btn_lg" (click)="runExperiment(exp._id)">Run</button>
+                    </div>                    
                   </div>
-                  <div
-                    class="delete-table"
-                    (click)="deleteExperimentPopup(exp._id, $event)"
-                    *ngIf="exp.state === 'completed'"
-                  >
+                  
+                  <div class="delete-table" (click)="deleteExperimentPopup(exp._id, $event)"
+                    *ngIf="exp.state === 'completed'">
                     <img src="assets/icons/delete-table.svg" />
                   </div>
                 </div>
@@ -172,15 +108,9 @@
                     <div class="col-2 title">SearchES</div>
                     <div class="col-2 title">CTR (goal)</div>
                   </div>
-                  <div
-                    class="row m-0 col-12 acc-row-body align-items-center"
-                    *ngFor="let expCol of exp.variants"
-                  >
+                  <div class="row m-0 col-12 acc-row-body align-items-center" *ngFor="let expCol of exp.variants">
                     <div class="col-3 d-flex varient-data align-items-center">
-                      <div
-                        class="name-letter"
-                        [style.background-color]="expCol.color"
-                      >
+                      <div class="name-letter" [style.background-color]="expCol.color">
                         {{ expCol.code }}
                       </div>
                       <div class="name">{{ expCol.name }}</div>
@@ -193,16 +123,14 @@
                     <div class="col-2 title">{{ expCol.searches }}</div>
                     <div class="col-2 title">
                       {{
-                        expCol.searches > 0
-                          ? expCol.searches + "%"
-                          : expCol.searches
+                      expCol.searches > 0
+                      ? expCol.searches + "%"
+                      : expCol.searches
                       }}
                     </div>
                   </div>
                   <div class="v-search-config">
-                    <span (click)="addExperiment('edit', exp)"
-                      >View search configuration</span
-                    >
+                    <span (click)="addExperiment('edit', exp)">View search configuration</span>
                   </div>
                 </div>
               </div>
@@ -213,16 +141,10 @@
       <!-- <div class="no-experiments">
         <div class="desc">No search results found</div>
       </div> -->
-      <div
-        class="no-experiments"
-        *ngIf="!(listOfExperiments && listOfExperiments.length)"
-      >
+      <div class="no-experiments" *ngIf="!(listOfExperiments && listOfExperiments.length)">
         <div>No results found</div>
       </div>
-      <div
-        class="no-experiments"
-        *ngIf="!(filterExperiments && filterExperiments.length)"
-      >
+      <div class="no-experiments" *ngIf="!(filterExperiments && filterExperiments.length)">
         <img src="assets/icons/experiment/empty_experiments.svg" />
         <div class="title">You haven't added any Experiment yet</div>
         <div class="dec">
@@ -234,11 +156,7 @@
   </div>
 </div>
 <!---add popup-->
-<kr-modal
-  modalType="center"
-  modalClass="modal_popups_ addFieldModalPop smallModal"
-  #addExperiments
->
+<kr-modal modalType="center" modalClass="modal_popups_ addFieldModalPop smallModal" #addExperiments>
   <div class="modal-header">
     <div class="title">New Experiment</div>
     <div class="close_icon" (click)="closeModalPopup()">
@@ -250,60 +168,39 @@
       <div class="row ml-0 mr-0 mb-3 col-12 p-0">
         <div class="kr-sg-input-text col-6 pl-pr-5">
           <div class="label-text">Name of Experiment</div>
-          <input
-            type="text"
-            autocomplete="off"
-            placeholder="Enter Experiment Name"
-            class="input-text"
-            [(ngModel)]="experiment.name"
-          />
+          <input type="text" autocomplete="off" placeholder="Enter Experiment Name" class="input-text"
+            [(ngModel)]="experiment.name" />
         </div>
       </div>
 
-      <div
-        class="row ml-0 mr-0 mb-3 col-12 p-0"
-        *ngFor="let vari of varientArray"
-      >
+      <div class="row ml-0 mr-0 mb-3 col-12 p-0" *ngFor="let vari of varientArray">
         <div class="kr-sg-input-text col-6 pl-pr-5 ifvariant">
           <div class="label-text">Variant Name</div>
-          <input
-            type="text"
-            autocomplete="off"
-            #varName
-            placeholder="Enter Variant Name"
-            class="input-text"
-            [(ngModel)]="vari.name"
-            (blur)="fetchVariant(vari, varName.value, 'name')"
-          />
+          <input type="text" autocomplete="off" #varName placeholder="Enter Variant Name" class="input-text"
+            [(ngModel)]="vari.name" (blur)="fetchVariant(vari, varName.value, 'name')" />
           <span class="v-name" [style.background-color]="vari.color">{{
             vari.code
-          }}</span>
+            }}</span>
         </div>
         <div class="kr-sg-dropdowns col-6 pl-pr-5">
           <div class="label-text">Search Configuration</div>
           <div class="dropdown dropdown-open">
-            <button
-              class="dropdown-toggle dropdown-input"
-              data-toggle="dropdown"
-            >
+            <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">
               {{
-                form_type === "add"
-                  ? vari.select_config
-                    ? vari.select_config
-                    : "Select Configuration"
-                  : vari.select_config === undefined
-                  ? vari.queryPipelineName
-                  : vari.select_config
+              form_type === "add"
+              ? vari.select_config
+              ? vari.select_config
+              : "Select Configuration"
+              : vari.select_config === undefined
+              ? vari.queryPipelineName
+              : vari.select_config
               }}
             </button>
             <ul class="dropdown-menu content-menu">
-              <li
-                *ngFor="let query of queryPipeline"
-                (click)="
+              <li *ngFor="let query of queryPipeline" (click)="
                   fetchVariant(vari, query._id, 'queryid');
                   vari.select_config = query.name
-                "
-              >
+                ">
                 {{ query.name }}
               </li>
             </ul>
@@ -314,63 +211,47 @@
       <div class="mb-3 variant-add" (click)="addVarient()">
         <img src="assets/icons/add_blue.svg" />Add Variant
       </div>
-      <br />
 
-      <!-- <div class="col-6 pl-pr-5" *ngIf="showSlider">
-        <div class="label-text">Traffic</div>
-        <nouislider
-          #sliderref
-          [config]="someRangeconfig"
-          [(ngModel)]="someRange"
-        ></nouislider>
-      </div> -->
+      <div class="trafic-sec" *ngIf="showSlider">
+        <div class="pl-pr-5 slider-sec">
+          <div class="label-text">Traffic</div>
+          <nouislider #sliderref [config]="someRangeconfig" [(ngModel)]="someRange"></nouislider>
+        </div>
+        <div class="percentage-sec">
+          <div class="names">
+            <span class="name">A</span><span class="perentage">50%</span>
+          </div>
+          <div class="names">
+            <span class="name">B</span><span class="perentage">50%</span>
+          </div>
+        </div>
+      </div>
+      
 
       <div class="duration-sec">
         <div class="kr-sg-input-text">
           <div class="label-text">Duration</div>
-          <input
-            type="number"
-            autocomplete="off"
-            class="input-text"
-            min="0"
-            max="90"
-            [(ngModel)]="experiment.duration"
-          />
-          <img
-            src="assets/icons/minus.svg"
-            class="minus"
-            (click)="
+          <input type="number" autocomplete="off" class="input-text" min="0" max="90"
+            [(ngModel)]="experiment.duration" />
+          <img src="assets/icons/minus.svg" class="minus" (click)="
               experiment.duration =
                 experiment.duration >= 1 ? experiment.duration - 1 : 0
-            "
-          />
-          <img
-            src="assets/icons/plus_gray.svg"
-            class="plus"
-            (click)="
+            " />
+          <img src="assets/icons/plus_gray.svg" class="plus" (click)="
               experiment.duration =
                 experiment.duration <= 89 ? experiment.duration + 1 : 90
-            "
-          />
+            " />
         </div>
         Days
       </div>
     </div>
   </perfect-scrollbar>
   <div class="modal-footer text-left">
-    <button
-      type="button"
-      class="kr-sg-button-primary btn_lg float-right"
-      [disabled]="!experiment.name"
-      (click)="createExperiment()"
-    >
+    <button type="button" class="kr-sg-button-primary btn_lg float-right" [disabled]="!experiment.name"
+      (click)="createExperiment()">
       Add
     </button>
-    <button
-      type="button"
-      class="kr-sg-button-secondary btn_lg float-right"
-      (click)="closeModalPopup()"
-    >
+    <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModalPopup()">
       Cancel
     </button>
   </div>
