--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -229,6 +229,17 @@
             }
             .duration-data {
               align-items: center;
+              .info-data{
+                color: #0D6EFD;
+                font-weight: normal;
+                font-size: 12px;
+                line-height: 14px;
+                display: flex;
+                align-items: center;
+                img{
+                  margin-right: 6px;
+                }
+              }
               .info-text {
                 color: #0d6efd;
                 font-weight: normal;
@@ -243,7 +254,7 @@
                 border-right: 1px solid #e4e5e7;
                 min-height: 32px;
                 display: flex;
-                align-items: center;
+                // align-items: center;
                 flex-direction: column;
                 justify-content: center;
               }
@@ -265,6 +276,16 @@
       }
       .acc-card-body {
         padding: 10px 0 20px 30px;
+        position: relative;
+        &::before{
+          content: "";
+          position: absolute;
+          width: 1px;
+          background: #E4E5E7;
+          height: calc(100% - 10px);
+          top: -11px;
+          left: 12px;
+        }
         .bg-sec {
           background: #f8f9fa;
           border-radius: 8px;
@@ -396,6 +417,52 @@
           padding-left: 5px;
           img {
             margin-right: 10px;
+          }
+        }
+        .trafic-sec{
+          display: flex;
+          .slider-sec{
+            min-width: 300px;
+            margin-right: 35px;
+          }
+          .percentage-sec{
+            display: flex;
+            align-items: center;
+            margin-left: 30px;
+            position: relative;
+            &::before{
+              content: "";
+              position: absolute;
+              left: -30px;
+              background: #E4E5E7;
+              height: 100%;
+              width: 2px;
+              top: 0;           
+            }
+            .names{
+              display: flex;
+              align-items: center;
+              margin-right: 20px;
+              .name{
+                background: #7027E5;
+                border: 1px solid #FFFFFF;
+                width: 24px;
+                height: 24px;
+                border-radius: 100%;
+                color: #fff;
+                text-align: center;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 21px;
+              }
+              .perentage{
+                color: #9AA0A6;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 15px;
+                margin-left: 10px;
+              }
+            }
           }
         }
         .kr-sg-input-text {
