--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -340,7 +340,7 @@
               <div class="inner-content row m-0 crawl-option">
                 <div class="col-12 p-0 input-paddings">
                   <div class="kr-sg-dropdowns">      
-                    <div class="label-text">Crwal Option</div>                                  
+                    <div class="label-text">Crawl Option</div>                                  
                     <div class="dropdown dropdown-open">
                         <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{crwalOptionLabel}}</button>                                            
                         <ul class="dropdown-menu content-menu">
@@ -466,10 +466,10 @@
                 </div>
                 <!-- Cookies -->
                 <div class="group-checkbox">
-                  <div class="pl-0 kr-sg-checkbox">
+                  <!-- <div class="pl-0 kr-sg-checkbox">
                       <input id="checkbox_grpg" class="checkbox-custom" type="checkbox" name = "isBlockHttpsMsgs" [(ngModel)] = "isBlockHttpsMsgs" [ngModelOptions]="{standalone: true}">
                       <label for="checkbox_grpg" class="checkbox-custom-label" style="font-weight: 500;font-size: 12px;">Block HTTPS Pages</label>
-                  </div>
+                  </div> -->
                   <div class="pl-0 kr-sg-checkbox">
                       <input id="checkbox_grph" class="checkbox-custom" type="checkbox" name = "isJavaScriptRendered" [(ngModel)] = "isJavaScriptRendered" [ngModelOptions]="{standalone: true}">
                       <label for="checkbox_grph" class="checkbox-custom-label" style="font-weight: 500;font-size: 12px;">Java Script Rendered</label>
@@ -494,7 +494,7 @@
               <div class="inner-content row m-0">
                 <div class="col-3 p-0">                   
                   <div class="kr-sg-input-text mb-4">
-                    <div class="label-text">Crwal Depth 
+                    <div class="label-text">Crawl Depth 
                       <div class="tooltip-custom">
                       <img src="assets/icons/info.svg">
                       <span class="tooltiptext">
@@ -524,7 +524,7 @@
                   </div>
                 </div>
               </div>
-               <!-- New Crwal everey thing-->
+               <!-- New Crawl everey thing-->
 
               <!-- <div class="inner-content row m-0">
                 <div class="col-12 p-0 input-paddings">
