--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -553,6 +553,15 @@
                     color: #FFFFFF;
                     float: left !important;
                 }
+                .parentloader{
+                    position: relative;
+                    .mainLoadingSpinner{
+                        position: absolute;
+                        left:92%;
+                        // right: -12px;
+                        // bottom: -24px;
+                    }
+                }
             }
         }        
     }
